syntax = "proto3";
package mint.v1beta1;

option go_package = "github.com/ODIN-PROTOCOL/odin-core/x/mint/types";

import "gogoproto/gogo.proto";
import "mint/v1beta1/params.proto";
import "cosmos/base/v1beta1/coin.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";

// Msg defines the mint Msg service.
service Msg {
  // WithdrawCoinsToAccFromTreasury defines a method for withdrawing from mint
  // module.
  rpc WithdrawCoinsToAccFromTreasury(MsgWithdrawCoinsToAccFromTreasury)
      returns (MsgWithdrawCoinsToAccFromTreasuryResponse);
  // MintCoins defines a method for minting from mint module.
  rpc MintCoins(MsgMintCoins) returns (MsgMintCoinsResponse);

  // UpdateParams defines a governance operation for updating the x/mint module
  // parameters. The authority is defaults to the x/gov module account.
  //
  // Since: cosmos-sdk 0.47
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgWithdrawCoinsToAccFromTreasury is a message for withdrawing from mint
// module.
message MsgWithdrawCoinsToAccFromTreasury {
  option (gogoproto.equal) = true;

  // Amount is the amoutn of coins to withdraw
  repeated cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  // Receiver is for whom withdraw coins
  string receiver = 2;
  // Sender is the message signer who submits this report transaction
  string sender = 3;
}

// MsgWithdrawCoinsToAccFromTreasuryResponse
message MsgWithdrawCoinsToAccFromTreasuryResponse {}

// MsgMintCoins is a message for minting from mint module.
message MsgMintCoins {
  option (gogoproto.equal) = true;

  // Amount is the amount of coins to mint
  repeated cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  // Sender is the message signer who submits this report transaction
  string sender = 2;
}

// MsgMintCoinsResponse
message MsgMintCoinsResponse {}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "odin-core/x/mint/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/mint parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}